fix uses in deploy job

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,8 @@ jobs:
 
     # if: github.event_name == 'worckflow_dispatch'
     steps:
-      - name: Render.com Deploy
-        uses: ttskch/render-deploy@v1.0.0
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
           api-key: ${{ secrets.MY_RENDER_API_KEY }}
